// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/weeklySchedules POST / should create a weekly schedule and have the appropriate defaults 1`] = `
Object {
  "entities": Object {
    "weeklySchedules": Object {
      "2bd862e8-67ce-4328-8b2a-7df838ddbeea": Object {
        "friday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "id": "2bd862e8-67ce-4328-8b2a-7df838ddbeea",
        "isAdvanced": false,
        "monday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "saturday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "startDate": null,
        "sunday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "thursday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "tuesday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "wednesday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "weeklySchedules": null,
      },
    },
  },
  "result": "2bd862e8-67ce-4328-8b2a-7df838ddbeea",
}
`;

exports[`/api/weeklySchedules PUT /:weeklyScheduleId should update a weekly schedule 1`] = `
Object {
  "entities": Object {
    "weeklySchedules": Object {
      "8ce3ba61-60cd-40c6-bc85-c018cabd4a40": Object {
        "friday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "id": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
        "isAdvanced": true,
        "monday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "saturday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "startDate": null,
        "sunday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "thursday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "tuesday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "wednesday": Object {
          "breaks": Array [],
          "chairIds": Array [],
          "endTime": "1970-02-01T00:00:00.000Z",
          "isClosed": false,
          "pmsScheduleId": null,
          "startTime": "1970-01-31T15:00:00.000Z",
        },
        "weeklySchedules": null,
      },
    },
  },
  "result": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
}
`;
